# TempleGL

./: .gitignore  CMakeLists.txt  README.md  config.yaml  vcpkg.json
model/: minecraft.mtl
shaders/: basic.frag  basic.vert  blinn_phong.frag  blinn_phong.vert  csm.geom  csm.vert  debug_lights.frag  debug_lights.geom  debug_lights.vert  empty.frag  image_space.frag  image_space.vert  screenspace.frag  shadow.vert  sky.frag  sky.vert  ssbo_light_data.glsl  ssbo_sky_vertex.glsl  ssbo_temple_vertex.glsl  ubo_matrices.glsl
src/: camera.cpp  camera.h  helper.cpp  helper.h  initializer.cpp  initializer.h  main.cpp  model.cpp  model.h  opengl_wrappers.h  renderer.cpp  renderer.h  screen.cpp  screen.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  skybox.cpp  skybox.h  stbi_helpers.cpp  stbi_helpers.h
